infra/deployments/artifacts/production/frontend/basic-app/templates/deployment-misql.yaml
---
# Source: basic-app/templates/deployment-misql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-db
  labels:
    app: frontend-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-db
  template:
    metadata:
      labels:
        app: frontend-db
    spec:
      containers:
        - name: misql
          image: "dlawrence00/misql:0.0.2"
          imagePullPolicy: Always
          ports:
            - containerPort: 3306
          resources:
            null
          volumeMounts:
            - name: misql-data
              mountPath: /data/cv/frontend.yaml
              subPath: frontend.yaml
      volumes:
        - name: misql-data
          configMap:
            name: misql-data
