infra/deployments/artifacts/production/frontend/basic-app/templates/service.yaml
---
# Source: basic-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    deploy-timestamp: "1773208556"
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 
      protocol: TCP
